--- a/ArvidNyden/ArvidNyden.Server/ArvidNyden.Server.csproj
+++ b/ArvidNyden/ArvidNyden.Server/ArvidNyden.Server.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <UserSecretsId>0a757ab1-9eca-4929-8ab3-31fa4b071dc0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.1.0" />
   </ItemGroup>
 
